<resources>
    <string name="app_name">Nissan Leaf Telematics</string>
    <string name="select_device">Select ELM327</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan</string>
    <string name="permissions_not_given">Bluetooth permissions not granted! Please grant!</string>
    <string name="none_paired">No paired devices</string>
    <string name="scanning">Scanning...</string>
    <string name="no_device_selected">No device selected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="read">READ</string>
    <string name="write">WRITE</string>
    <string name="apn_dial">APN Dial number</string>
    <string name="apn_user">APN User</string>
    <string name="apn_pass">APN Password</string>
    <string name="apn_name">APN Name</string>
    <string name="dns1">DNS1</string>
    <string name="dns2">DNS2</string>
    <string name="proxy">Proxy hostname</string>
    <string name="proxy_port">Proxy port</string>
    <string name="apn_connection_type">APN Connection Type (IP or PDP)</string>
    <string name="server_hostname">Server hostname</string>
    <string name="vin">VIN</string>
    <string name="not_connected">Not connected! Please connect first.</string>
    <string name="connection_init_finish">Connection with Telematics established</string>
    <string name="data_empty">No data received!</string>
    <string name="data_integrity_check">Data integrity check</string>
    <string name="vin_too_long">VIN is too long!</string>
    <string name="data_too_long">Data is too long! 128 char max!</string>
    <string name="writing_data">Writing data</string>
    <string name="writing_data_desc">Please do not disconnect ELM327!</string>
    <string name="done_writing">Done writing data!</string>
    <string name="empty_data">Empty data</string>
    <string name="empty_data_warn">Are you sure you want to write blank data to this field?</string>
    <string name="activation">TCU activation</string>
    <string name="signal_level">Signal level</string>
    <string name="continental20212">TCU 2012–2016 (Continental)</string>
    <string name="device_type_not_selected">TCU Type not selected!</string>
    <string name="choose_tcu_model">Choose TCU Model</string>
    <string name="ficosa_gen2_5">TCU 2015-2019 (late AZE0 24/30 kWh and ZE1 40 kWh)</string>
    <string name="signal_level_rssi">Signal level (RSSI)</string>
    <string name="vehicle_definition">Vehicle definition</string>
    <string name="obs_server_url">OBS Server URL</string>
    <string name="obs_server_port">OBS Server Port</string>
    <string name="imei">IMEI</string>
    <string name="registered_net_name">Registered network name</string>
    <string name="unique_id">Unique ID</string>
    <string name="sim_info">SIM Info</string>
    <string name="disconnect_first">Disconnect the connection first!</string>
    <string name="reading_data">Reading data</string>
    <string name="reading_data_desc">Attempting to read data, please wait</string>
    <string name="mainserverurl">MAINSERVERCONFIG</string>
    <string name="apn_settings">APN Settings</string>
    <string name="apn_name_tsp">APN (TSP)</string>
    <string name="sms_num"><![CDATA[GDC -> TCU SMS Number]]></string>
    <string name="sms_num_tsp"><![CDATA[TCU -> TSP SMS Number]]></string>
    <string name="tsp_pki">TSP PKI</string>
    <string name="tsp_server_url">TSP Server URL</string>
    <string name="tsp_server_port">TSP Server Port</string>
    <string name="tsp_apn_name">TSP APN Name</string>
    <string name="tsp_apn_user">TSP APN User</string>
    <string name="tsp_apn_pass">TSP APN Password</string>
    <string name="tsp_dns1">DNS1 (TSP)</string>
    <string name="tsp_dns2">DNS2 (TSP)</string>
    <string name="tsp_rootca">TSP RootCA</string>
    <string name="services">Services</string>
    <string name="svtb">Stolen Vehicle Tracking Brazil</string>
    <string name="rlu">Remote Door Lock/Unlock</string>
    <string name="horn"><![CDATA[Remote Horn&Light]]></string>
    <string name="remotestart">Remote Start</string>
    <string name="timeout">Timeout</string>
</resources>